# vtw-writer

./: CMakeLists.txt  DataArray.cpp  DataArray.h  DataOrder.h  LICENSE  VTIWriter.cpp  VTIWriter.h  VTKWriter.cpp  VTKWriter.h  VTKWriter.i  VTPWriter.cpp  VTPWriter.h
install/unix/: set_vtk_writer_env.sh
install/windows/: vtkWriter.template.in
pugixml/: CMakeLists.txt
